--- a/_toc.yml
+++ b/_toc.yml
@@ -3,7 +3,8 @@
 
 format: jb-book
 root: intro
+options:
+  numbered: True
 chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
+- file: courses/eas503/eas503
+- file: courses/eas503/eas503/Final_Project
