Adding StreamlitApp and GitHub Details

--- a/_toc.yml
+++ b/_toc.yml
@@ -9,4 +9,5 @@ chapters:
 - file: courses/eas503/eas503
   sections:
   - file: courses/eas503/Final_Project.ipynb
+  - file: courses/eas503/Video_recording
 
