Adding StreamlitApp and GitHub Details

--- a/_toc.yml
+++ b/_toc.yml
@@ -10,4 +10,6 @@ chapters:
   sections:
   - file: courses/eas503/Final_Project.ipynb
   - file: courses/eas503/Video_recording
+  - file: courses/eas503/Streamlit
+  - file: courses/eas503/GitHub
 
