--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: My sample book
 author: The Jupyter Book Community
-logo: logo.png
+logo: https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FFile%3AUniversity_at_Buffalo_logo.png&psig=AOvVaw2ts-asrrojhVXKkpkFFIR4&ust=1734867530483000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMDV4ajjuIoDFQAAAAAdAAAAABAI
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
